web-infras/parser/tests/fixtures/babel/es2017/async-functions/await-inside-arrow-expression-disallowed/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,15)
1|() => { await x }
 |             ^
